fix spacing

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -42,6 +42,7 @@
     }
     #about_me{
         margin-top: 40px;
+        margin-bottom: 70px;
         width: 80%;
     }
 
